--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
 	"name": "top-api",
 	"version": "0.0.1",
 	"description": "",
-	"author": "Anton Larichev",
+	"author": "Vadym Boyarchuk",
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
